[gd_scene load_steps=4 format=2]

[ext_resource path="res://Juego/Proyectiles/Canion.gd" type="Script" id=1]
[ext_resource path="res://Juego/Proyectiles/Proyectil.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Proyectiles/laserRetro_000_canion.ogg" type="AudioStream" id=3]

[node name="Canion" type="Node2D"]
rotation = 1.5708
script = ExtResource( 1 )
proyectil = ExtResource( 2 )
cadencia_disparo = 0.3
velocidad_proyectil = 1500

[node name="PuntoIzquierdo" type="Position2D" parent="."]
position = Vector2( 0, -4 )

[node name="PuntoDerecho" type="Position2D" parent="."]
position = Vector2( 0, 4 )

[node name="AudioDisparoSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="TimerEnfriamiento" type="Timer" parent="."]

[connection signal="timeout" from="TimerEnfriamiento" to="." method="_on_TimerEnfriamiento_timeout"]
